--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
+      packages: read
 
     steps:
     - uses: actions/checkout@v4
@@ -30,7 +30,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        env: ${{ secrets.GITHUB_TOKEN }}
+      
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
