--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
+    - name: Authenticate to GitHub Packages
+      run: echo "<settings><servers><server><id>github</id><username>${{ github.actor }}</username><password>${{ secrets.GT_TOKEN }}</password></server></servers></settings>" > $HOME/.m2/settings.xml
       
     - name: Build with Maven
       run: mvn -B package --file pom.xml
