--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <dependencies>
         <dependency>
             <groupId>com.gistimpact</groupId>
-            <artifactId>loggerjava</artifactId>
+            <artifactId>loggerjava1729</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
