--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
                 file: ./Dockerfile
                 push: true
                 tags: achhaypathak/test-package:latest
+                github-token: ${{ github.token }}
                 secrets: GITHUB_TOKEN = ${{ secrets.GITHUB_TOKEN }}
 
             - name: Verify Pushed Image
