--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
     #   run: echo "<settings><servers><server><id>github</id><username>${{ github.actor }}</username><password>${{ secrets.GT_TOKEN }}</password></server></servers></settings>" > $HOME/.m2/settings.xml
       
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
