--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
                 push: true
                 tags: achhaypathak/test-package:latest
                 github-token: ${{ github.token }}
-                secrets: GITHUB_TOKEN = ${{ secrets.GITHUB_TOKEN }}
+                secrets: GITHUB_TOKEN = ${{ secrets.GT_TOKEN }}
 
             - name: Verify Pushed Image
               run: docker pull achhaypathak/test-package:latest
