--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,9 @@ jobs:
                 file: ./Dockerfile
                 push: true
                 tags: achhaypathak/test-package:latest
-                github-token: ${{ github.token }}
-                secrets: GITHUB_TOKEN = ${{ secrets.GT_TOKEN }}
+                build-args: |
+                  GITHUB_ACTOR=${{ github.actor }}
+                  GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
 
             - name: Verify Pushed Image
               run: docker pull achhaypathak/test-package:latest
