--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,12 @@ jobs:
                 file: ./Dockerfile
                 push: true
                 tags: achhaypathak/test-package:latest
-                github-token: ${{ secrets.GITHUB_TOKEN }}
-                build-args: |
-                  GITHUB_ACTOR=${{ github.actor }}
-                  GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+                secrets: |
+                    GIT_AUTH_TOKEN=${{ secrets.GT_TOKEN }}
+                # github-token: ${{ secrets.GITHUB_TOKEN }}
+                # build-args: |
+                #   GITHUB_ACTOR=${{ github.actor }}
+                #   GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
 
             - name: Verify Pushed Image
               run: docker pull achhaypathak/test-package:latest
