--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
                 tags: achhaypathak/test-package:latest
                 secrets: |
                     GIT_AUTH_TOKEN=${{ secrets.GT_TOKEN }}
-                # github-token: ${{ secrets.GITHUB_TOKEN }}
+                github-token: ${{ secrets.GITHUB_TOKEN }}
                 # build-args: |
                 #   GITHUB_ACTOR=${{ github.actor }}
                 #   GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
