--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,6 +36,6 @@ jobs:
       
     - name: Build with Maven
       run: mvn clean install
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
