--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,5 +37,5 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
       env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GT_TOKEN }}
       
