--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
                 tags: achhaypathak/test-package:latest
                 secrets: |
                     GIT_AUTH_TOKEN=${{ secrets.GT_TOKEN }}
-                github-token: ${{ secrets.GITHUB_TOKEN }}
+                github-token: ${{ secrets.GT_TOKEN }}
                 # build-args: |
                 #   GITHUB_ACTOR=${{ github.actor }}
-                #   GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+                #   GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
 
             - name: Verify Pushed Image
               run: docker pull achhaypathak/test-package:latest
