--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
                 file: ./Dockerfile
                 push: true
                 tags: achhaypathak/test-package:latest
-                secret-envs: |
+                secrets: |
                     GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
                 # github-token: ${{ secrets.GT_TOKEN }}
                 # build-args: |
