--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,9 @@ jobs:
                 secrets: |
                     GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
                 # github-token: ${{ secrets.GT_TOKEN }}
-                # build-args: |
-                #   GITHUB_ACTOR=${{ github.actor }}
-                #   GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
+                build-args: |
+                  # GITHUB_ACTOR=${{ github.actor }}
+                  GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
 
             - name: Verify Pushed Image
               run: docker pull achhaypathak/test-package:latest
