--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,26 +9,37 @@ on:
 jobs:
     build-and-push:
         runs-on: ubuntu-latest
-        permissions:
-            contents: read
-            packages: read
         steps:
-            - name: Checkout Repo
-              uses: actions/checkout@v4
-
-            - name: Log in to Dockerhub
-              uses: docker/login-action@v3
+            - uses: actions/checkout@v4
+            
+            - name: Set up JDK 17
+              uses: actions/setup-java@v4
               with:
-                username: ${{ secrets.DOCKER_USERNAME }}
-                password: ${{ secrets.DOCKER_PASSWORD }}
+                java-version: '17'
+                distribution: 'corretto'
+                # cache: maven
+        
+            # - name: Authenticate to GitHub Packages
+            #   run: echo "<settings><servers><server><id>github</id><username>${{ github.actor }}</username><password>${{ secrets.GT_TOKEN }}</password></server></servers></settings>" > $HOME/.m2/settings.xml
+              
+            - name: Build with Maven
+              run: mvn clean install
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GT_TOKEN }}
+                  
+            # - name: Log in to Dockerhub
+            #   uses: docker/login-action@v3
+            #   with:
+            #     username: ${{ secrets.DOCKER_USERNAME }}
+            #     password: ${{ secrets.DOCKER_PASSWORD }}
 
             - name: Build and Push Docker image
               uses: docker/build-push-action@v6
               with:
                 context: .
                 file: ./Dockerfile
-                push: true
-                tags: achhaypathak/test-package:latest
+                # push: true
+                # tags: achhaypathak/test-package:latest
                 secrets: |
                     GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
                 # github-token: ${{ secrets.GT_TOKEN }}
@@ -36,5 +47,5 @@ jobs:
                   # GITHUB_ACTOR=${{ github.actor }}
                   GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
 
-            - name: Verify Pushed Image
-              run: docker pull achhaypathak/test-package:latest
+            # - name: Verify Pushed Image
+            #   run: docker pull achhaypathak/test-package:latest
