--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,9 @@ jobs:
         
             # - name: Authenticate to GitHub Packages
             #   run: echo "<settings><servers><server><id>github</id><username>${{ github.actor }}</username><password>${{ secrets.GT_TOKEN }}</password></server></servers></settings>" > $HOME/.m2/settings.xml
-              
+
             - name: Build with Maven
-              run: mvn clean install
+              run: mvn clean install && env
               env:
                   GITHUB_TOKEN: ${{ secrets.GT_TOKEN }}
                   
