--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
                 java-version: '17'
                 distribution: 'corretto'
                 # cache: maven
+
+            - run: cat /home/runner/.m2/settings.xml
         
             # - name: Authenticate to GitHub Packages
             #   run: echo "<settings><servers><server><id>github</id><username>${{ github.actor }}</username><password>${{ secrets.GT_TOKEN }}</password></server></servers></settings>" > $HOME/.m2/settings.xml
