--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,25 +29,25 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GT_TOKEN }}
                   
-            # - name: Log in to Dockerhub
-            #   uses: docker/login-action@v3
-            #   with:
-            #     username: ${{ secrets.DOCKER_USERNAME }}
-            #     password: ${{ secrets.DOCKER_PASSWORD }}
+            - name: Log in to Dockerhub
+              uses: docker/login-action@v3
+              with:
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD }}
 
             - name: Build and Push Docker image
               uses: docker/build-push-action@v6
               with:
                 context: .
                 file: ./Dockerfile
-                # push: true
-                # tags: achhaypathak/test-package:latest
+                push: true
+                tags: achhaypathak/test-package:latest
                 secrets: |
                     GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
                 # github-token: ${{ secrets.GT_TOKEN }}
-                build-args: |
-                  # GITHUB_ACTOR=${{ github.actor }}
-                  GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
+                # build-args: |
+                #   # GITHUB_ACTOR=${{ github.actor }}
+                #   GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
 
             # - name: Verify Pushed Image
             #   run: docker pull achhaypathak/test-package:latest
