--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,8 @@ jobs:
                 push: true
                 tags: achhaypathak/test-package:latest
                 secret-envs: |
-                    GITHUB_ACTOR=${{ github.actor }}
-                    GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
+                    # GITHUB_ACTOR=${{ github.actor }}
+                    # GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
                 # github-token: ${{ secrets.GT_TOKEN }}
                 # build-args: |
                 #   # GITHUB_ACTOR=${{ github.actor }}
