--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,12 +43,12 @@ jobs:
                 push: true
                 tags: achhaypathak/test-package:latest
                 secrets: |
-                    # GITHUB_ACTOR=${{ github.actor }}
-                    # GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
+                    GITHUB_ACTOR=${{ github.actor }}
+                    GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
                 # github-token: ${{ secrets.GT_TOKEN }}
-                build-args: |
-                  # GITHUB_ACTOR=${{ github.actor }}
-                  GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
+                # build-args: |
+                #   GITHUB_ACTOR=${{ github.actor }}
+                #   GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
 
             # - name: Verify Pushed Image
             #   run: docker pull achhaypathak/test-package:latest
