--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,13 +42,13 @@ jobs:
                 file: ./Dockerfile
                 push: true
                 tags: achhaypathak/test-package:latest
-                secret-envs: |
+                secrets: |
                     GITHUB_ACTOR=${{ github.actor }}
                     GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
                 # github-token: ${{ secrets.GT_TOKEN }}
-                build-args: |
-                  GITHUB_ACTOR=${{ github.actor }}
-                  GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
+                # build-args: |
+                #   GITHUB_ACTOR=${{ github.actor }}
+                #   GITHUB_TOKEN=${{ secrets.GT_TOKEN }}
 
             # - name: Verify Pushed Image
             #   run: docker pull achhaypathak/test-package:latest
